#
#--------------------------------------------------------------------------
#
#		CHANGE LOG FOR THE LATEX2HTML RELEASE
#
# What is recorded here are changes to any file of the LaTeX2HTML release
# *meaningful to the user*, such as new options or files, important bug
# fixes etc.
# A more detailed log history can be found within the particular files, near
# the top.
#
#		- check for failure of pdflatex run
#		- newline after footnote should give space
#		- fix ref to label inside float
#		- add sidewaysfigure, sidewaystable
#		- fix eqnarray*
#
#--------- v2022
#
#		- fix cropped figures
#		- revert PreviewBorder to 0.5bp
#		- support download attribute for <A> tag
#		- remove meta tags for distribution, etc
#		- allow input filename with no extension
#		  echo hello world | latex2html -dir out -mkdir /dev/stdin
#
#--------- v2021.2
#
#		- latex2html -long_titles   fix duplicate file names
#		- latex2html -long_titles 5 -title "Title"
#		  correct link from index.html
#		- pnmquant -norandom    for reproducible builds
#		- treat cygwin as unix
#		- $WORDS_IN_INDEX configurable
#		- fix image size for multline, subequations
#		- remove extra <SPAN> after subequations
#		- equation numbering for multline
#		- close bold, etc, at end of environment
#		- implement memoir document class
#		- fix scanning of latex comments
#		- fix subequation numbering
#		- babel should not set character encoding of input file
#		- package nomencl.sty
#		- package nameref.sty
#		- options -cut_ref_num -add_ref_name
#
#--------- v2021
#
#		- implement listings package
#		- support for \hyperref (hyperref.sty and html.sty syntax)
#		- \multirow with automatic width (*)
#		- support for length units em and ex in &convert_length
#		- support for font-, page- and minipage-relative length units
#		- support for specifying image size in wrapfigure
#		- support for commands: \; \, \quad \qquad inside \textsc
#		- \itemize[], \enumerate[], \description[] (discard argument)